[gd_scene load_steps=35 format=2]

[ext_resource path="res://a_king/Sprites/03-Pig/Run (34x28).png" type="Texture" id=1]
[ext_resource path="res://a_king/Sprites/03-Pig/Dead (34x28).png" type="Texture" id=2]
[ext_resource path="res://a_king/Sprites/03-Pig/Hit (34x28).png" type="Texture" id=3]
[ext_resource path="res://a_king/Sprites/03-Pig/Idle (34x28).png" type="Texture" id=4]
[ext_resource path="res://sound/pig_hit.wav" type="AudioStream" id=5]
[ext_resource path="res://character/enemy.gd" type="Script" id=19]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 170, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 204, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 238, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 272, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 306, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 340, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 170, 0, 34, 28 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "dead",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "get_hit",
"speed": 8.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 9.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.75, 1 )

[sub_resource type="Animation" id=5]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.5, -3.5 )
scale = Vector2( 1.20588, 1.25 )
frames = SubResource( 1 )
animation = "run"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3 )
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Node2D"]
position = Vector2( 10, 1 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 4.5 )
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0.25, -9 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 5 )

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 8.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
